<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#B0C4DE"
    android:orientation="vertical"
    android:padding="8dp">

    <Button
        android:id="@+id/confirmWordButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirm_word"
        android:layout_marginBottom="8dp"
        android:background="@drawable/button_background"
        android:textColor="#FFFFFF" /><!-- Kelimeyi Onayla Butonu -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <androidx.gridlayout.widget.GridLayout
            android:id="@+id/selectedLettersGrid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:columnCount="10"
            app:rowCount="3"
            android:layout_marginTop="12dp"
            android:padding="4dp"
            android:layout_gravity="center_horizontal"/>

    </LinearLayout>

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/letterGrid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:columnCount="6"
        app:rowCount="5"
        android:layout_margin="10dp"
        android:padding="32dp" /> <!-- Harflerin Bulunduğu Grid -->




    <TextView
        android:id="@+id/timerTextView"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:text="@string/initial_timer"
        android:gravity="center"
        android:textSize="16sp" />  <!-- Sayaç -->



    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:max="30"
        android:progress="0"
        android:progressTint="#00FF00"
        android:progressBackgroundTint="#D3D3D3"
        android:visibility="visible"/>


    <TextView
        android:id="@+id/turnCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/initial_turn_count"
        android:textStyle="bold"
        android:paddingLeft="10dp"
        android:background="@drawable/textview_border"
        android:textColor="#4FC3F7" />

    <TextView
        android:id="@+id/currentScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/initial_current_score"
        android:textStyle="bold"
        android:paddingLeft="10dp"
        android:background="@drawable/textview_border"
        android:textColor="#03A9F4" />


    <TextView
        android:id="@+id/turnRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/initial_turn_right"
        android:textStyle="bold"
        android:paddingLeft="10dp"
        android:background="@drawable/textview_border"
        android:textColor="#03A9F4" />
    <TextView
        android:id="@+id/targetScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/initial_target_score"
        android:textStyle="bold"
        android:paddingLeft="10dp"
        android:background="@drawable/textview_border"
        android:textColor="#4FC3F7" />

    <TextView
        android:id="@+id/selectedWordScoreTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/initial_letter_score"
        android:textStyle="bold"
        android:paddingLeft="10dp"
        android:background="@drawable/textview_border"
        android:textColor="#03A9F4" />
    <TextView
        android:id="@+id/balance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/initial_balance"
        android:textStyle="bold"
        android:paddingLeft="10dp"
        android:background="@drawable/textview_border"
        android:textColor="#4FC3F7"
        android:layout_marginBottom="12dp" /> <!-- Alt boşluk için margin ekleyin -->


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <Button
            android:id="@+id/loadTokenButton"
            android:layout_width="9dp"
            android:layout_height="48dp"
            android:layout_weight="5"
            android:text="@string/jeton_ekle"
            android:background="@drawable/button_turquoise_background"
            android:textColor="#666666"
            android:textStyle="bold"
            android:textSize="13sp" />

        <Button
            android:id="@+id/replayButton"
            android:layout_width="9dp"
            android:layout_height="48dp"
            android:layout_weight="5"
            android:text="@string/replay"
            android:background="@drawable/button_turquoise_background"
            android:textColor="#666666"
            android:textStyle="bold"
            android:textSize="13sp" />


    </LinearLayout>
</LinearLayout>
